--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,39 +1,52 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @listing.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @listing.description %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @listing.price %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @listing.location %>
-</p>
-
-<p>
-  <strong>Shippable:</strong>
-  <%= @listing.shippable %>
-</p>
-
-<p>
-  <strong>Publish:</strong>
-  <%= @listing.publish %>
-</p>
-
-<p>
-  <strong>Remove:</strong>
-  <%= @listing.remove %>
-</p>
-
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+<div class="off-canvas-wrap ">
+  <div class="inner-wrap">
+    <%= render partial: "topbar" %>
+    <aside class="left-off-canvas-menu">
+      <ul class="off-canvas-list">
+        <%= render partial: "topbar_links" %>
+      </ul>
+    </aside>
+    <section class="main-section">
+      <%= render partial: "hero" %>
+      <div class="row">
+        <div class="small-12 medium-8 columns">
+          <img src="http://placehold.it/610x610&text=Thumbnail">
+        </div>
+        <div class="small-12 medium-4 columns">
+          <%= render partial: "pricing_table" %>
+        </div>
+      </div>
+      <div class="row panel top-margin">
+        <div class="small-12 columns">
+          <h3>Seller Information:</h3>
+        </div>
+        <div class="small-3 medium-2 columns seller-pic">
+          <img id="profile-pic" src="http://placehold.it/70x70&text=Thumbnail">
+        </div>
+        <div class="small-9 medium-10 columns seller-name">
+          <h4 class="text-left">Name NameNameNameName NameName</h4>
+        </div>
+        <div class="small-12 columns">
+          <div class="row">
+            <div class="small-12 medium-6 large-4 columns">
+              <p><%= link_to "<i class='fi-shopping-cart'></i> Seller's Marketplace".html_safe, user_marketplace_path, class: "button radius bon-button seller-button" %></p>
+            </div>
+<!--             <div class="small-12 medium-6 columns left">
+              <p><%#= link_to "<i class='fi-torso'></i> Seller's Profile".html_safe, profile_path, class: "button radius bon-button seller-button" %></p>
+            </div> -->
+          </div>
+        </div>
+      </div>
+<!--       <div class="row">
+        <div class="small-6 medium-3 columns">
+          <a href="" class="button radius small bon-button profile-button"><i class="fi-torsos"></i> Connect</a>
+        </div>
+        <div class="small-6 medium-3 left columns">
+          <a href="" class="button radius small bon-button profile-button"><i class="fi-mail"></i> Message</a>
+        </div>
+      </div> -->
+      <%= render partial: "footer" %>
+    </section>
+    <a class="exit-off-canvas"></a>
+  </div>
+</div>
