--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -18,28 +18,28 @@
         <div class="small-12 medium-8 columns">
         <%= link_to "Add new listing", new_listing_path, class: "button radius expand new-listing-button" %>
           <h2>Current Listings</h2>
-          <!-- <table>
+          <table>
             <thead>
               <tr>
-                <th>Name</th>
+                <th>Title</th>
                 <th>Category</th>
+                <th>Published?</th>
                 <th colspan="3"></th>
               </tr>
             </thead>
 
             <tbody>
-              <%# @listings.each do |listing| %>
+              <% @listings.each do |listing| %>
                 <tr>
-                  <td><%#= listing.name %></td>
-                  <td><%#= listing.category %></td>
-                  <td><%#= listing.subcategory %></td>
-                  <td><%#= listing.published? %></td>
-                  <td><%#= link_to 'Show', listing %></td>
-                  <td><%#= link_to 'Edit', edit_listing_path(listing) %></td>
+                  <td><%= listing.title %></td>
+                  <td><%= "#{listing.category.name}/#{listing.subcategory.name }" %></td>
+                  <td><%= listing.published? %></td>
+                  <td><%= link_to 'Show', listing %></td>
+                  <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
                 </tr>
-              <%# end %>
+              <% end %>
             </tbody>
-          </table> -->
+          </table>
 
         </div>
         <!-- Right Sidebar -->
