--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -23,7 +23,7 @@
               <tr>
                 <th>Title</th>
                 <th>Category</th>
-                <th>Published?</th>
+                <th>Published</th>
                 <th colspan="3"></th>
               </tr>
             </thead>
@@ -31,10 +31,9 @@
             <tbody>
               <% @listings.each do |listing| %>
                 <tr class="listing">
-                  <td><%= listing.title %></td>
+                  <td><%= link_to listing.title, listing %></td>
                   <td><%= "#{listing.category.name}/#{listing.subcategory.name }" %></td>
                   <td><%= listing.published? %></td>
-                  <td><%= link_to 'Show', listing %></td>
                   <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
                   <td><%= link_to 'Remove', remove_listing_path(listing), method: :patch, data: { confirm: 'Are you sure?' } %></td>
                 </tr>
