Implement ajax filter for listings by category and subcategory for marketplace

--- a/app/views/application/_marketplace_nav.html.erb
+++ b/app/views/application/_marketplace_nav.html.erb
@@ -1,29 +1,2 @@
-<li><label>Categories</label></li>
-<% @categories.each do |category| %>
-  <li><%= category.name %></li>
-  <ul>
-  <% category.subcategories.each do |subcategory| %>
-    <li><%= subcategory.name %></li>
-  <% end %>
-  </ul>
-<% end %>
-<!-- <li><a href="#">Trees</a></li>
-<ul>
-  <li>Pine</li>
-  <li>Maple</li>
-  <li>Juniper</li>
-  <li>Other</li>
-</ul>
-<li><a href="#">Pots</a></li>
-<ul>
-  <li>Rectange</li>
-  <li>Square</li>
-  <li>Round</li>
-  <li>Oval</li>
-</ul>
-<li><a href="#">Tools</a></li>
-<ul>
-  <li>Scissors</li>
-  <li>Branch Cutters</li>
-  <li>Repotting</li>
-</ul>  -->
+<li><label><%= link_to 'Categories', filter_listings_path, remote: true %></label></li>
+<%= render partial: @categories %>
