--- a/app/views/application/_marketplace_items.html.erb
+++ b/app/views/application/_marketplace_items.html.erb
@@ -1,53 +1,3 @@
-<div class="row">
-  <% @listings.each do |listing| %>
-    <div class="small-6 large-4 columns">
-      <img src="http://placehold.it/1000x1000&text=Thumbnail">
-      <div class="panel">
-        <h5><%= link_to listing.title, listing %></h5>
-        <h6 class="subheader">$<%= listing.price %></h6>
-      </div>
-    </div>
-  <% end %>
-<!--   <div class="small-6 large-4 columns">
-    <img src="http://placehold.it/1000x1000&text=Thumbnail">
-    <div class="panel">
-      <h5>Item Name</h5>
-      <h6 class="subheader">$000.00</h6>
-    </div>
-  </div>
-  <div class="large-4 small-6 columns">
-    <img src="http://placehold.it/500x500&text=Thumbnail">
-    <div class="panel">
-      <h5>Item Name</h5>
-      <h6 class="subheader">$000.00</h6>
-    </div>
-  </div>
-  <div class="large-4 small-6 columns">
-    <img src="http://placehold.it/500x500&text=Thumbnail">
-    <div class="panel">
-      <h5>Item Name</h5>
-      <h6 class="subheader">$000.00</h6>
-    </div>
-  </div>
-  <div class="large-4 small-6 columns">
-    <img src="http://placehold.it/500x500&text=Thumbnail">
-    <div class="panel">
-      <h5>Item Name</h5>
-      <h6 class="subheader">$000.00</h6>
-    </div>
-  </div>
-  <div class="large-4 small-6 columns">
-    <img src="http://placehold.it/500x500&text=Thumbnail">
-    <div class="panel">
-      <h5>Item Name</h5>
-      <h6 class="subheader">$000.00</h6>
-    </div>
-  </div>
-  <div class="large-4 small-6 columns">
-    <img src="http://placehold.it/500x500&text=Thumbnail">
-    <div class="panel">
-      <h5>Item Name</h5>
-      <h6 class="subheader">$000.00</h6>
-    </div>
-  </div> -->
+<div id="listings" class="row">
+ <%= render partial: @listings %>
 </div>
