Implment category/subcategory filter for marketplace using unique urls and calls to marketplace#index

--- a/app/views/application/_marketplace_nav.html.erb
+++ b/app/views/application/_marketplace_nav.html.erb
@@ -1,2 +1,2 @@
-<li><label><%= link_to 'Categories', filter_listings_path, remote: true %></label></li>
+<li><label><%= link_to 'Categories', marketplace_path %></label></li>
 <%= render partial: @categories %>
