--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,4 +1,5 @@
-<!-- <li><%#= link_to category.name, {
+<!-- Ajax version
+<li><%#= link_to category.name, {
   controller: 'marketplace',
   action: 'filter_listings',
   category_id: category.id,
