--- a/app/assets/javascripts/marketplace.js.coffee.erb
+++ b/app/assets/javascripts/marketplace.js.coffee.erb
@@ -1,16 +1,22 @@
 # Place all the behaviors and hooks related to the matching controller here.
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://coffeescript.org/
-
 $ ->
-  $(document).on 'change', '#categories_radio', (evt) ->
-    $.ajax 'set_subcategories',
+  $(document).on 'change', '#sort_listing', (evt) ->
+    category = $('#listings').data('categoryId')
+    subcategory = $('#listings').data('subcategoryId')
+
+    $.ajax
+      url: 'ajax_sort',
       type: 'GET'
       dataType: 'script'
       data: {
-        category_id: $('input[name="listing[category_id]"]:checked').val()
+        category_id: category
+        subcategory_id: subcategory
+        sort: $('#sort_listing option:selected').val()
       }
       error: (jqXHR, textStatus, errorThrown) ->
         console.log("AJAX Error: #{textStatus}")
+
       success: (data, textStatus, jqXHR) ->
-        console.log("Dynamic subcategory select OK!")
+        console.log("Dynamic listing sort OK!")
