--- a/app/views/application/_marketplace_items.html.erb
+++ b/app/views/application/_marketplace_items.html.erb
@@ -1,3 +1,9 @@
-<div id="listings" class="row">
- <%= render partial: @listings %>
-</div>
+<%= content_tag "div", id: "listings",
+                      :class => "row",
+                      data: { category_id: params[:category_id], subcategory_id: params[:subcategory_id] } do %>
+  <%= render partial: @listings %>
+<% end %>
+
+<!-- <div id="listings" class="row">
+  <%#= render partial: @listings %>
+</div> -->
