--- a/app/assets/javascripts/marketplace.js.coffee.erb
+++ b/app/assets/javascripts/marketplace.js.coffee.erb
@@ -14,9 +14,31 @@ $ ->
         category_id: category
         subcategory_id: subcategory
         sort: $('#sort_listing option:selected').val()
+        distance_filter: $('#distance_filter option:selected').val()
       }
       error: (jqXHR, textStatus, errorThrown) ->
         console.log("AJAX Error: #{textStatus}")
 
       success: (data, textStatus, jqXHR) ->
         console.log("Dynamic listing sort OK!")
+
+$ ->
+  $(document).on 'change', '#distance_filter', (evt) ->
+    category = $('#listings').data('categoryId')
+    subcategory = $('#listings').data('subcategoryId')
+
+    $.ajax
+      url: 'ajax_sort',
+      type: 'GET'
+      dataType: 'script'
+      data: {
+        category_id: category
+        subcategory_id: subcategory
+        sort: $('#sort_listing option:selected').val()
+        distance_filter: $('#distance_filter option:selected').val()
+      }
+      error: (jqXHR, textStatus, errorThrown) ->
+        console.log("AJAX Error: #{textStatus}")
+
+      success: (data, textStatus, jqXHR) ->
+        console.log("Dynamic listing filter OK!")
