--- a/app/views/application/_marketplace_search_filter.html.erb
+++ b/app/views/application/_marketplace_search_filter.html.erb
@@ -5,6 +5,7 @@
         <div class="small-4 columns">
           <p>Order by:</p>
         </div>
+        <!-- TODO implement sort for mobile-->
         <div class="small-8 columns">
           <%= select_tag :sort, options_for_select([["Newest", "created_at desc"], ["Low Price", "price asc"], ["High Price", "price desc"]], ), :id => 'mobile_sort_listing', :class => 'filter-sort' %>
         </div>
@@ -25,8 +26,9 @@
         <div class="small-4 columns">
           <p>Distance:</p>
         </div>
+        <!-- TODO implement filter for mobile -->
         <div class="small-8 columns">
-          <%= select_tag :sort, options_for_select([["25 Miles", "name"], ["50 Miles", "most_recent"]], ), :class => 'filter-sort' %>
+          <%= select_tag :distance_filter, options_for_select([["50 Miles", "50"], ["100 Miles", "100"], ["500 Miles", "500"], ["All", "10000"]], ), :id => 'mobile_distance_filter', :class => 'filter-sort' %>
         </div>
       </div>
       <div class="hide-for-small medium-6 large-3 columns no-padding">
@@ -34,7 +36,7 @@
           <p class="filter-label">Distance:</p>
         </div>
         <div class="medium-6 columns no-padding">
-          <%= select_tag :sort, options_for_select([["25 Miles", "name"], ["50 Miles", "most_recent"]], ), :class => 'filter-sort' %>
+          <%= select_tag :distance_filter, options_for_select([["50 Miles", "50"], ["100 Miles", "100"], ["500 Miles", "500"], ["All", "10000"]], ), :id => 'distance_filter', :class => 'filter-sort' %>
         </div>
         <div class="hide-for-small medium-1 columns filter-pipe">
           <span>|</span>
