Fix price format for views

--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -2,6 +2,6 @@
   <img src="http://placehold.it/1000x1000&text=Thumbnail">
   <div class="panel">
     <h5><%= link_to listing.title, listing %></h5>
-    <h6 class="subheader">$<%= listing.price %></h6>
+    <h6 class="subheader"><%= number_to_currency(listing.price) %></h6>
   </div>
 </div>
