--- a/app/views/application/_temp_links.html.erb
+++ b/app/views/application/_temp_links.html.erb
@@ -4,15 +4,15 @@
   <ul class="dropdown">
     <li><%= link_to "Landing Page", root_path %></li>
     <li><%= link_to "Home", user_root_path %></li>
-    <li><%= link_to "Messages", messages_path %></li>
-    <li><%= link_to "Message", message_path %></li>
+    <li><%= link_to "Messages", messages_index_path %></li>
+    <li><%= link_to "Message", messages_show_path %></li>
     <li><%= link_to "Profile", profile_path %></li>
-    <li><%= link_to "Photos", photo_path %></li>
+    <li><%= link_to "Photos", photos_path %></li>
     <li><%= link_to "My Marketplace", user_marketplace_path %></li>
     <li><%= link_to "Marketplace", marketplace_path %></li>
-    <li><%= link_to "My Products", products_path %></li>
-    <li><%#= link_to "Product", single_product_path %></li>
-
-    <li><%= link_to "Offers", offers_path %></li>
+    <!-- <li><%#= link_to "My Products", products_path %></li> -->
+    <!-- <li><%#= link_to "Product", single_product_path %></li> -->
+    <li><%= link_to "Offers", offers_index_path %></li>
+    <li><%= link_to "Offer", offers_show_path %></li>
   </ul>
 </li>
