Fix temp links for temp views

--- a/app/views/application/_home_links.html.erb
+++ b/app/views/application/_home_links.html.erb
@@ -1,8 +1,8 @@
 <!-- <li><%#= link_to "<i class='fi-list-thumbnails'></i> Feed".html_safe, user_root_path %></li> -->
 <!-- <li><%#= link_to "<i class='fi-shopping-cart'></i> Marketpalce".html_safe, marketplace_path %></li> -->
-<li><%= link_to "<i class='fi-price-tag'></i> My Listings".html_safe, products_path %></li>
-<li><%= link_to "<i class='fi-mail'></i> Messages".html_safe, messages_path %></li>
-<li><%= link_to "<i class='fi-burst'></i> Offers".html_safe, offers_path %></li>
+<li><%= link_to "<i class='fi-price-tag'></i> My Listings".html_safe, listings_path %></li>
+<li><%= link_to "<i class='fi-mail'></i> Messages".html_safe, messages_index_path %></li>
+<li><%= link_to "<i class='fi-burst'></i> Offers".html_safe, offers_index_path %></li>
 <!-- <li><%#= link_to "<i class='fi-power'></i> Sigh Out".html_safe,destroy_user_session_path, :method => :delete %></li> -->
 
 <!-- <li><%#= link_to "<i class='fi-photo'></i> Photos".html_safe %></li>
