--- a/app/views/application/_temp_links.html.erb
+++ b/app/views/application/_temp_links.html.erb
@@ -10,7 +10,7 @@
     <li><%= link_to "Photos", photos_path %></li>
     <li><%= link_to "My Marketplace", user_marketplace_path %></li>
     <li><%= link_to "Marketplace", marketplace_path %></li>
-    <!-- <li><%#= link_to "My Products", products_path %></li> -->
+    <li><%= link_to "My Products", listings_path %></li>
     <!-- <li><%#= link_to "Product", single_product_path %></li> -->
     <li><%= link_to "Offers", offers_index_path %></li>
     <li><%= link_to "Offer", offers_show_path %></li>
