Fix links for temp views

--- a/app/views/application/_home_nav.html.erb
+++ b/app/views/application/_home_nav.html.erb
@@ -14,7 +14,7 @@
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-home"></i> <%= link_to "Home", user_root_path %></h5>
       <hr class="home-nav-hr" />
-      <h5 class="title"><i class="fi-price-tag"></i> <%= link_to "My Listings", products_path %></h5>
+      <h5 class="title"><i class="fi-price-tag"></i> <%= link_to "My Listings", listings_path %></h5>
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-mail"></i> <%= link_to "Messages", messages_path %></h5>
       <hr class="home-nav-hr" />
