--- a/app/views/application/_offcanvas_nav.html.erb
+++ b/app/views/application/_offcanvas_nav.html.erb
@@ -1,10 +1,10 @@
 <ul class="off-canvas-list">
   <li><%= link_to("<i class='fi-shopping-cart'></i> Marketplace".html_safe, marketplace_path, class: marketplace_page? ? "current" : nil) %></li>
-    <li><%= link_to "<i class='fi-home'></i> Home".html_safe, products_path %></li>
+    <li><%= link_to "<i class='fi-home'></i> Home".html_safe, listings_path %></li>
     <%= render partial: "home_links" %>
   <% if user_signed_in? %>
     <li><%= link_to "<i class='fi-power'></i> Sign Out".html_safe, destroy_user_session_path, :method => :delete %></li>
-  <% else %>  
+  <% else %>
     <li><%= link_to "<i class='fi-power'></i> Sign In".html_safe, new_user_session_path %></li>
   <% end %>
-</ul>  
+</ul>
