--- a/app/views/application/_home_nav.html.erb
+++ b/app/views/application/_home_nav.html.erb
@@ -16,9 +16,9 @@
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-price-tag"></i> <%= link_to "My Listings", listings_path %></h5>
       <hr class="home-nav-hr" />
-      <h5 class="title"><i class="fi-mail"></i> <%= link_to "Messages", messages_path %></h5>
+      <h5 class="title"><i class="fi-mail"></i> <%= link_to "Messages", messages_index_path %></h5>
       <hr class="home-nav-hr" />
-      <h5 class="title"><i class="fi-burst"></i> <%= link_to "Offers", offers_path %></h5>
+      <h5 class="title"><i class="fi-burst"></i> <%= link_to "Offers", offers_index_path %></h5>
      <!--  <hr class="home-nav-hr" />
       <h5 class="title"><a href="#"><i class="fi-photo"></i> Photos</a></h5>
       <hr class="home-nav-hr" />
