Remove scoping for styles by controller name

--- a/app/assets/stylesheets/_profile.scss
+++ b/app/assets/stylesheets/_profile.scss
@@ -1,4 +1,5 @@
-.users {
+// TODO fix scope for styles by controller name
+// .users {
 
   .profile-hr {
     padding-bottom: 5px;
@@ -49,4 +50,4 @@
   .profile-panel {
     margin-bottom: 10px;
   }
-}
+// }
