--- a/app/assets/javascripts/marketplace.js.coffee.erb
+++ b/app/assets/javascripts/marketplace.js.coffee.erb
@@ -2,7 +2,7 @@
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://coffeescript.org/
 $ ->
-  $(document).on 'change', ['#sort_listing', '#distance_filter', '#get_zip'], (evt) ->
+  $(document).on 'change', ['#sort_listing', '#mobile_sort_listing', '#distance_filter', '#mobile_distance_filter', '#get_zip'], (evt) ->
     category = $('#listings').data('categoryId')
     subcategory = $('#listings').data('subcategoryId')
     sortValue = $('#sort_listing option:selected').val()
