--- a/app/views/application/_temp_links.html.erb
+++ b/app/views/application/_temp_links.html.erb
@@ -8,7 +8,7 @@
     <li><%= link_to "Message", messages_show_path %></li>
     <li><%= link_to "Profile", profile_path %></li>
     <li><%= link_to "Photos", photos_path %></li>
-    <li><%= link_to "My Marketplace", user_marketplace_path %></li>
+    <!-- <li><%#= link_to "My Marketplace", user_marketplace_path %></li> -->
     <li><%= link_to "Marketplace", marketplace_path %></li>
     <li><%= link_to "My Products", listings_path %></li>
     <!-- <li><%#= link_to "Product", single_product_path %></li> -->
