--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing listing</h1>
+<div class="row">
+  <div class="small-12 columns">
 
-<%= render 'form' %>
+    <h1>Editing listing</h1>
 
-<%= link_to 'Show', @listing %> |
-<%= link_to 'Back', listings_path %>
+    <%= render 'form' %>
+
+    <%= link_to 'Show', @listing %> |
+    <%= link_to 'Back', listings_path %>
+
+  </div>
+</div>
