Sorted out shared partials to shared directory

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <ul class="off-canvas-list">
             <!-- Put Offcanvas stuff here -->
             <%= render partial: "topbar_links" %>
-            <%= render partial: "marketplace_nav" if marketplace_page? %>
+            <%= render partial: "shared/marketplace_nav" if marketplace_page? %>
           </ul>
         </aside>
         <section class="main-section">
