--- a/app/views/application/_offcanvas_nav.html.erb
+++ b/app/views/application/_offcanvas_nav.html.erb
@@ -1,3 +1,5 @@
+<!-- TODO check if this is even used-->
+
 <ul class="off-canvas-list">
   <li><%= link_to("<i class='fi-shopping-cart'></i> Marketplace".html_safe, marketplace_path, class: marketplace_page? ? "current" : nil) %></li>
     <li><%= link_to "<i class='fi-home'></i> Home".html_safe, listings_path %></li>
