--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,13 +3,13 @@
   <div id="marketplace-nav" class="medium-4 large-3 columns hide-for-small">
     <%= link_to "Add new item", new_listing_path, class: "button radius expand new-product-button" %>
     <div class="panel">
-      <%= render partial: "marketplace_nav" %>
+      <%= render partial: "shared/marketplace_nav" %>
     </div>
   </div>
   <!-- End Side Bar -->
   <div class="small-12 medium-8 large-9 columns">
     <%= link_to "Add new item", new_listing_path, class: "button radius expand new-product-button hide-for-medium-up" %>
     <%= render partial: "product_search_filter" %>
-    <%= render partial: "marketplace_items" %>
+    <%= render partial: "shared/marketplace_items" %>
   </div>
 </div>
