--- a/app/views/marketplace/index.html.erb
+++ b/app/views/marketplace/index.html.erb
@@ -2,7 +2,7 @@
   <!-- Side Bar -->
   <div id="marketplace-nav" class="medium-4 large-3 columns hide-for-small">
     <div class="panel">
-      <%= render partial: "marketplace_nav" %>
+      <%= render partial: "shared/marketplace_nav" %>
     </div>
   </div>
   <!-- End Side Bar -->
@@ -18,6 +18,6 @@
       </div>
     </div>
     <% end %>
-    <%= render partial: "marketplace_items" %>
+    <%= render partial: "shared/marketplace_items" %>
   </div>
 </div>
