--- a/app/views/temp_views/user_marketplace.html.erb
+++ b/app/views/temp_views/user_marketplace.html.erb
@@ -4,7 +4,7 @@
     <aside class="left-off-canvas-menu">
       <ul class="off-canvas-list">
         <%= render partial: "topbar_links" %>
-        <%= render partial: "marketplace_nav" %>
+        <%= render partial: "shared/marketplace_nav" %>
       </ul>
     </aside>
     <section class="main-section">
@@ -14,13 +14,13 @@
         <!-- Side Bar -->
         <div id="marketplace-nav" class="medium-4 large-3 columns hide-for-small">
           <div class="panel">
-            <%= render partial: "marketplace_nav" %>
+            <%= render partial: "shared/marketplace_nav" %>
           </div>
         </div>
         <!-- End Side Bar -->
         <div class="small-12 medium-8 large-9 columns">
-          <%= render partial: "marketplace_search_filter" %> <!-- TODO Need to change distance to user's distance -->
-          <%= render partial: "marketplace_items" %>
+          <%= render partial: "marketplace/marketplace_search_filter" %> <!-- TODO Need to change distance to user's distance -->
+          <%= render partial: "shared/marketplace_items" %>
         </div>
       </div>
       <%= render partial: "footer" %>
