--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -1,6 +1,6 @@
 #hero {
   // background-color: #246020;
-  margin-top: 40px;
+  // margin-top: 40px;
   margin-bottom: 20px;
   background:
     linear-gradient(135deg, #246020 22px, #262626 22px, #262626 24px, transparent 24px, transparent 67px, #262626 67px, #262626 69px, transparent 69px),
@@ -9,7 +9,7 @@
     background-size: 64px 128px;
 
   // background-color:#246020;
-  // background-image: 
+  // background-image:
   //   radial-gradient(circle at 100% 150%, #246020 24%, #262626 25%, #262626 28%, #246020 29%, #246020 36%, #262626 36%, #262626 40%, transparent 40%, transparent),
   //   radial-gradient(circle at 0    150%, #246020 24%, #262626 25%, #262626 28%, #246020 29%, #246020 36%, #262626 36%, #262626 40%, transparent 40%, transparent),
   //   radial-gradient(circle at 50%  100%, #262626 10%, #246020 11%, #246020 23%, #262626 24%, #262626 30%, #246020 31%, #246020 43%, #262626 44%, #262626 50%, #246020 51%, #246020 63%, #262626 64%, #262626 71%, transparent 71%, transparent),
