--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -1,36 +1,17 @@
-<div class="header">
-  <nav class="top-bar" data-topbar>
-    <section class="left-small hide-for-medium-up">
-      <a class="left-off-canvas-toggle menu-icon"><span></span></a>
-    </section>
-    <ul class="title-area">
-      <li class="name">
-        <h1><%= link_to "Bon-cycle", root_path %></h1>
-      </li>
-      <!-- <li class="has-dropdown hide-for-medium-up">
-        <a href="#"><i class="fi-alert"></i></a>
-        <ul class="dropdown">
-          <li><a href="#">New Offer</a></li>
-          <li><a href="#">New Message</a></li>
-          <li><a href="#">New Connection</a></li>
-        </ul>
-      </li> -->
-      <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><%= link_to "Bon-cycle", root_path %></h1>
+    </li>
+    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <%= render partial: "temp_links" %>
+
+      <%= render partial: "topbar_links" %>
     </ul>
-
-    <section class="top-bar-section">
-      <!-- Right Nav Section -->
-      <ul class="right">
-
-        <!-- TODO remove temp links -->
-        <%= render partial: "temp_links" %>
-
-        <%= render partial: "topbar_links" %>
-      </ul>
-      <!-- Left Nav Section -->
-      <ul class="left">
-        <!-- <li><a href="#">Left Nav Button</a></li> -->
-      </ul>
-    </section>
-  </nav>
-</div>
+  </section>
+</nav>
