Add min-height, as foundation equalizer wasn't working

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,10 @@
   padding-right: 0;
 }
 
+.listing-title {
+  min-height: 108px;
+}
+
 // // Remove select dropdown arrow for Firefox
 // select {
 //     -webkit-appearance: none;
