--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,6 +1,6 @@
-<div class="small-6 large-4 columns">
+<div class="small-12 medium-6 large-4 columns">
   <img src="http://placehold.it/1000x1000&text=Thumbnail">
-  <div class="panel">
+  <div class="panel listing-title">
     <h5><%= link_to listing.title, listing %></h5>
     <h6 class="subheader"><%= number_to_currency(listing.price) %></h6>
   </div>
