--- a/app/views/shared/_marketplace_items.html.erb
+++ b/app/views/shared/_marketplace_items.html.erb
@@ -1,4 +1,4 @@
-<%= content_tag "div", id: "listings",
+<%= content_tag :div, id: "listings",
                       :class => "row",
                       data: { category_id: params[:category_id], subcategory_id: params[:subcategory_id] } do %>
   <%= render partial: @listings %>
