--- a/app/views/marketplace/_marketplace_search_filter.html.erb
+++ b/app/views/marketplace/_marketplace_search_filter.html.erb
@@ -28,7 +28,7 @@
         </div>
         <!-- TODO implement filter for mobile -->
         <div class="small-8 columns">
-          <%= select_tag :distance_filter, options_for_select([["50 Miles", "50"], ["100 Miles", "100"], ["500 Miles", "500"], ["All", "10000"]], ), :id => 'mobile_distance_filter', :class => 'filter-sort' %>
+          <%= select_tag :distance_filter, options_for_select([["All", "10000"], ["500 Miles", "500"], ["100 Miles", "100"], ["50 Miles", "50"]], ), :id => 'mobile_distance_filter', :class => 'filter-sort' %>
         </div>
       </div>
       <div class="hide-for-small medium-6 large-3 columns no-padding">
@@ -36,7 +36,11 @@
           <p class="filter-label">Distance:</p>
         </div>
         <div class="medium-6 columns no-padding">
-          <%= select_tag :distance_filter, options_for_select([["50 Miles", "50"], ["100 Miles", "100"], ["500 Miles", "500"], ["All", "10000"]], ), :id => 'distance_filter', :class => 'filter-sort' %>
+          <% if user_signed_in? or session[:coordinates] %>
+            <%= select_tag :distance_filter, options_for_select([["All", "10000"], ["500 Miles", "500"], ["100 Miles", "100"], ["50 Miles", "50"]], ), :id => 'distance_filter', :class => 'filter-sort' %>
+          <% else %>
+            <button class="location-button" onclick="getLocation()">Share location</button>
+          <% end %>
         </div>
         <div class="hide-for-small medium-1 columns filter-pipe">
           <span>|</span>
