Add styles for get location button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,12 @@
   min-height: 108px;
 }
 
+.location-button {
+  font-size: 12px;
+  margin: 8px 0;
+  padding: 5px;
+}
+
 // // Remove select dropdown arrow for Firefox
 // select {
 //     -webkit-appearance: none;
