--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,6 +14,9 @@
       <div><%= f.label :postcode %><br />
       <%= f.text_field :postcode %></div>
 
+      <div><%= f.label :address %><br />
+      <%= f.text_field :address, value: @address %></div>
+
       <div><%= f.label :email %><br />
       <%= f.email_field :email %></div>
 
