--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,30 +1,43 @@
 <div class="row">
-  <div class="small-12 columns">
+  <div class="small-12 medium-8 columns">
     <h2>Sign up</h2>
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
+      <div class="row">
+        <div class="medium-4 columns"><%= f.label :firstname, "First name" %>
+        <%= f.text_field :firstname, :autofocus => true %></div>
 
-      <div><%= f.label :firstname %><br />
-      <%= f.text_field :firstname, :autofocus => true %></div>
+        <div class="medium-4 columns"><%= f.label :lastname, "Last name" %>
+        <%= f.text_field :lastname %></div>
 
-      <div><%= f.label :lastname %><br />
-      <%= f.text_field :lastname %></div>
+        <div class="medium-4 columns"><%= f.label :email, "Email address" %>
+        <%= f.email_field :email %></div>
+      </div>
+      <%= f.fields_for :address, Address.new do |addr| %>
+        <p>Address</p>
+        <div class="row">
+          <div class="medium-3 columns"><%= addr.label :city %>
+          <%= addr.text_field :city, value: @city_name %></div>
 
-      <div><%= f.label :postcode %><br />
-      <%= f.text_field :postcode %></div>
+          <div class="medium-3 columns"><%= addr.label :state %>
+          <%= addr.text_field :state, value: @state_name %></div>
 
-      <div><%= f.label :address %><br />
-      <%= f.text_field :address, value: @address %></div>
+          <div class="medium-3 columns"><%= addr.label :postcode %>
+          <%= addr.text_field :postcode, value: @post_code %></div>
 
-      <div><%= f.label :email %><br />
-      <%= f.email_field :email %></div>
+          <div class="medium-3 columns"><%= addr.label :country %>
+          <%= addr.text_field :country, value: @country_name %></div>
+        </div>
+      <% end %>
+      <div class="row">
+        <div class="medium-6 columns"><%= f.label :password %>
+        <%= f.password_field :password %></div>
 
-      <div><%= f.label :password %><br />
-      <%= f.password_field :password %></div>
+        <div class="medium-6 columns"><%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %></div>
+      </div>
 
-      <div><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
 
       <div><%= f.submit "Sign up" %></div>
     <% end %>
