--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,6 +4,9 @@
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
+      <%= f.hidden_field :latitude, value: @latitude %>
+      <%= f.hidden_field :longitude, value: @longitude %>
+
       <div class="row">
         <div class="medium-4 columns"><%= f.label :firstname, "First name" %>
         <%= f.text_field :firstname, :autofocus => true %></div>
