Remove trailing comma

--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -16,7 +16,7 @@ $(function(){
         category_id: category,
         subcategory_id: subcategory,
         sort: sortValue,
-        distance_filter: distanceValue,
+        distance_filter: distanceValue
       },
     });
   });
