Use no_listings_method helper method for empty query results

--- a/app/views/marketplace/ajax_sort.js.erb
+++ b/app/views/marketplace/ajax_sort.js.erb
@@ -1,1 +1,1 @@
-$("#listings").empty().append("<%= escape_javascript(render(:partial => @listings)) %>");
+$("#listings").empty().append("<%= escape_javascript(render(@listings) || no_listings_message) %>");
