--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,8 +4,8 @@
 
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
-      <%= f.hidden_field :latitude, value: @latitude %>
-      <%= f.hidden_field :longitude, value: @longitude %>
+      <%= f.hidden_field :latitude, value: @user.address.latitude %>
+      <%= f.hidden_field :longitude, value: @user.address.longitude %>
 
       <div class="row">
         <div class="medium-4 columns"><%= f.label :firstname, "First name" %>
@@ -17,20 +17,20 @@
         <div class="medium-4 columns"><%= f.label :email, "Email address" %>
         <%= f.email_field :email %></div>
       </div>
-      <%= f.fields_for :address, Address.new do |addr| %>
+      <%= f.fields_for :address, @user.address do |addr| %>
         <p>Address</p>
         <div class="row">
           <div class="medium-3 columns"><%= addr.label :city %>
-          <%= addr.text_field :city, value: @city_name %></div>
+          <%= addr.text_field :city, value: @user.address.city %></div>
 
           <div class="medium-3 columns"><%= addr.label :state %>
-          <%= addr.text_field :state, value: @state_name %></div>
+          <%= addr.text_field :state, value: @user.address.state %></div>
 
           <div class="medium-3 columns"><%= addr.label :postcode %>
-          <%= addr.text_field :postcode, value: @post_code %></div>
+          <%= addr.text_field :postcode, value: @user.address.postcode %></div>
 
           <div class="medium-3 columns"><%= addr.label :country %>
-          <%= addr.text_field :country, value: @country_name %></div>
+          <%= addr.text_field :country, value: @user.address.country %></div>
         </div>
       <% end %>
       <div class="row">
@@ -40,7 +40,6 @@
         <div class="medium-6 columns"><%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation %></div>
       </div>
-
 
       <div><%= f.submit "Sign up" %></div>
     <% end %>
