--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,4 @@
+<% page_title @listing.title %>
 <div class="row">
   <div class="small-12 medium-8 columns">
     <img src="http://placehold.it/610x610&text=Thumbnail">
