Replace plaece holder text for actual user name

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -15,7 +15,7 @@
     <img id="profile-pic" src="http://placehold.it/70x70&text=Thumbnail">
   </div>
   <div class="small-9 medium-10 columns seller-name">
-    <h4 class="text-left">Name NameNameNameName NameName</h4>
+    <h4 class="text-left"><%= @listing.user.full_name %></h4>
   </div>
   <div class="small-12 columns">
     <div class="row">
