--- a/app/views/marketplace/index.html.erb
+++ b/app/views/marketplace/index.html.erb
@@ -1,3 +1,4 @@
+<% page_title "Marketplace" %>
 <div id="marketplace" class="row">
   <!-- Side Bar -->
   <div id="marketplace-nav" class="medium-4 large-3 columns hide-for-small">
