Change render partial to shared/home_nav

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <!-- Nav Sidebar -->
   <div class="small-12 medium-4 columns ">
-  <%= render partial: "home_nav" %>
+    <%= render partial: "shared/home_nav" %>
   </div>
   <!-- Main Feed -->
   <div class="small-12 medium-8 columns">
