--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,27 +1,61 @@
 <div class="row">
-  <div class="small-12 columns">    
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+  <div class="small-12 columns">
+    <h1>Update your info</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="small-12 medium-6 large-5 columns">
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
       <%= devise_error_messages! %>
 
-      <div><%= f.label :email %><br />
-      <%= f.email_field :email, :autofocus => true %></div>
+      <%= f.label :firstname, "First name" %>
+      <%= f.text_field :firstname, :autofocus => true %>
+
+      <%= f.label :lastname, "Last name" %>
+      <%= f.text_field :lastname %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
 
-      <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-      <%= f.password_field :password, :autocomplete => "off" %></div>
+      <%= f.fields_for :address, @user.address do |addr| %>
+        <p>Address</p>
+        <div class="row">
+          <div class="small-12 medium-6 columns"><%= addr.label :city %>
+          <%= addr.text_field :city, value: @user.address.city %></div>
 
-      <div><%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation %></div>
+          <div class="small-12 medium-6 columns"><%= addr.label :postcode %>
+          <%= addr.text_field :postcode, value: @user.address.postcode %></div>
+        </div>
+        <div class="row">
+          <div class="small-12 medium-6 columns left"><%= addr.label :state %>
+          <%= addr.text_field :state, value: @user.address.state %></div>
 
-      <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-      <%= f.password_field :current_password %></div>
+          <div class="small-12 medium-6 columns left"><%= addr.label :country %>
+          <%= addr.text_field :country, value: @user.address.country %></div>
+        </div>
+      <% end %>
+      <dl class="accordion" data-accordion>
+        <dd class="accordion-navigation">
+          <a href="#panel2">Reset password</a>
+          <div id="panel2" class="content">
+            <%= f.label :password %> <em>(leave blank if you don't want to change it)</em>
+            <%= f.password_field :password, :autocomplete => "off" %>
 
-      <div><%= f.submit "Update" %></div>
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation %>
+          </div>
+        </dd>
+      </dl>
+
+
+      <%= f.label :current_password %> <em>(to confirm your changes)</em>
+      <%= f.password_field :current_password %>
+
+      <%= f.submit "Update" %>
     <% end %>
 
     <h3>Cancel my account</h3>
@@ -30,4 +64,4 @@
 
     <%= link_to "Back", :back %>
   </div>
-</div>  
+</div>
