--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -22,7 +22,7 @@
         <% @listings.each do |listing| %>
           <tr class="listing">
             <td><%= link_to listing.title, listing %></td>
-            <td><%= "#{listing.category.name}/#{listing.subcategory.name }" %></td>
+            <td><%= "#{listing.category.name}" %></td>
             <td><%= listing.published? %></td>
             <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
             <td><%= link_to 'Remove', remove_listing_path(listing), method: :patch, data: { confirm: 'Are you sure?' } %></td>
