--- a/app/assets/stylesheets/_search_filter.scss
+++ b/app/assets/stylesheets/_search_filter.scss
@@ -6,10 +6,18 @@
   padding-left: 5px;
 }
 
+.distance-label{
+  padding-left: 0;
+}
+
+.mobile-distance-label{
+  padding-left: 5px;
+}
+
 .filter-pipe {
   font-size: x-large;
   color: #d8d8d8;
-  margin-top: 5px;
+  margin-top: 4px;
   max-width: 5px;
   padding: 0;
 }
