Link I'm Interested button to controller action to send message of interest

--- a/app/views/listings/_pricing_table.html.erb
+++ b/app/views/listings/_pricing_table.html.erb
@@ -9,5 +9,5 @@
   <li class="bullet-item">Location: <%= @listing.location %></li>
   <li class="price"><%= number_to_currency(@listing.price) %></li>
   <li class="bullet-item"><%= willing_to_ship?(@listing) %></li>
-  <li class="cta-button"><a class="button radius product-button" href="#">I'm interested!</a></li>
+  <li class="cta-button"><%= link_to "I'm interested!", im_interested_path(@listing), method: :post %></li>
 </ul>
