Change link to form messages

--- a/app/views/shared/_home_nav.html.erb
+++ b/app/views/shared/_home_nav.html.erb
@@ -16,7 +16,7 @@
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-price-tag"></i> <%= link_to "My Listings", listings_path %></h5>
       <hr class="home-nav-hr" />
-      <h5 class="title"><i class="fi-mail"></i> <%= link_to "Messages", messages_index_path %></h5>
+      <h5 class="title"><i class="fi-mail"></i> <%= link_to "Messages", messages_path %></h5>
       <hr class="home-nav-hr" />
       <h5 class="title"><i class="fi-burst-sale"></i> <%= link_to "Offers", offers_index_path %></h5>
       <hr class="home-nav-hr" />
