--- a/app/views/temp_views/messages_index.html.erb
+++ b/app/views/temp_views/messages_index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <!-- Nav Sidebar -->
   <div class="small-12 medium-5 large-4 columns hide-for-small">
-  <%= render partial: "home_nav" %>
+  <%= render partial: "shared/home_nav" %>
   </div>
   <!-- Messages -->
   <div class="small-12 medium-7 large-8 columns">
