Attach search button click handler to a unique id

--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -17,7 +17,7 @@ $(function(){
       },
     });
   }
-  $('.bon-button').on('click', searchFliterSort);
+  $('#search-button').on('click', searchFliterSort);
 
   $('#sort_listing, #distance_filter').on('change', searchFliterSort);
 
