--- a/app/views/marketplace/_marketplace_search_filter.html.erb
+++ b/app/views/marketplace/_marketplace_search_filter.html.erb
@@ -30,7 +30,7 @@
             <%= text_field_tag :search, params[:search], :class => "marketplace-search", :placeholder => "Search" %>
           </div>
           <div class="small-3 columns">
-            <%= submit_tag "Search", class: "postfix product-search-button bon-button" %>
+            <%= submit_tag "Search", :class => "postfix product-search-button bon-button", id: "search-button" %>
           </div>
         </div>
       </div>
