--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
       <div class="small-12 columns panel">
-        <h4>New Messages!</h4>
+        <h4>Inbox</h4>
       </div>
     </div>
     <div class="row">
@@ -23,11 +23,11 @@
 
     <div class="row">
       <div class="small-12 columns panel">
-        <h4>Read Messages</h4>
+        <h4>Sent</h4>
       </div>
     </div>
     <div class="row">
-      <%= (render partial: 'message', collection: @read_messages, as: :conversation) || "No messages" %>
+      <%= (render partial: 'message', collection: @sent_messages, as: :conversation) || "No messages" %>
     </div>
     <div class="row">
       <%= link_to "Load More", messages_index_path, class: "button radius expand bon-button" %>
